<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BMI Check</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    
    <string name="text1"> Check your BMI</string>
    <string name="weight"> Weight</string>
    <string name="height"> Height</string>
    <string name="meters"> Meters</string>
    <string name="centimeters"> Centimeters</string>
    <string name="calculate"> Calculate BMI</string>
    <string name="reset"> Reset values</string>
    <string name="yourBmiIs"> your BMI is </string>
    <string name="errone"> Invalid input</string>
    
    
    <string name="resultat">Please enter your weight and height</string>
    <string name="poids_normal">Congratulations! You have a healthy weight :)</string>
    <string name="surpoids">OMG you\'re overweight! :O</string>
    <string name="over_surpoids">Faton, stop messing!</string>
    <string name="souspoids">Oups you\'re underweight! :o</string>
    <string name="clickedOnActionSettings">You clicked on Settings</string>
    <string name="clickedOnActionAbout">There\'s no About (yet) mouahaha</string>
    
    <string name="prefDisplay">Display</string>

</resources>
